--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
         </div><!-- /.navbar-collapse -->
       </div>
     </nav>
+    <% flash.each do |type, msg| %>
+      <%= content_tag :div, msg, class: "alert alert-#{type}" %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
