--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,12 @@
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contact Us", new_contact_path %></li>
           </ul>
+          <% if user_signed_in? %>
+            <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn" %>
+          <% else %>
+            <%= link_to "Log In", new_user_session_path, class: "btn btn-default navbar-btn" %>
+            <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default navbar-btn" %>
+          <% end %>
         </div><!-- /.navbar-collapse -->
       </div>
     </nav>
